Added a testStarterKit task to the web api module in the backend